deleted test files and updated makefile

--- a/project1/makefile
+++ b/project1/makefile
@@ -1,3 +1,5 @@
 ftpproject: myftpserver.c
 	gcc -o build/server/server  myftpserver.c
 	gcc -o build/client/client  myftpclient.c
+clean: 
+	rm build/server/server build/client/client
