--- a/project2/Makefile
+++ b/project2/Makefile
@@ -1,10 +1,10 @@
 all:	peer tracker
 
 peer: peer.c
-	gcc -Wall $< -o $@
+	gcc -pthread -Wall $< -o $@
 
 tracker: tracker.c
-	gcc -Wall $< -o $@
+	gcc -pthread -Wall $< -o $@
 
 clean:
 	rm -f peer tracker *.o *~ core
