tracker fully functional

--- a/project2/Makefile
+++ b/project2/Makefile
@@ -1,11 +1,11 @@
 all:	peer tracker
 
 peer: peer.c
-	gcc -pthread -Wall $< -o $@
+	gcc -pthread -Wall $< -o build/$@
 
 tracker: tracker.c
-	gcc -pthread -Wall $< -o $@
+	gcc -pthread -Wall $< -o build/$@
 
 clean:
-	rm -f peer tracker *.o *~ core
+	rm -f build/peer build/tracker *.o *~ core
 
