--- a/project3/Makefile
+++ b/project3/Makefile
@@ -1,10 +1,10 @@
 all:	sender receiver
 
 sender: sender.c
-	gcc -Wall $< -o $@
+	gcc -pthread -Wall $< -o $@
 
 receiver: receiver.c
-	gcc -Wall $< -o $@
+	gcc -pthread -Wall $< -o $@
 
 clean:
 	rm -f sender receiver *.o *~ core
